# rss

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.staging.yml  compose.yml  flake.nix  module.nix  shell.nix
.github/workflows/: back.yml  ci.yml  front.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.full
backend/.sqlx/: query-00644fc56ed4e0e8058063f6b4ce902b4d1179896ce24f211e8b756856fb86a2.json  query-01e3bf7735951eb14b6796f121d9a16ec4336af40118a1ff595fa66339908335.json  query-08376639ad59a4f892b9d7889c3dac6b67839485d11d76b3a8ce6701a154c287.json  query-20f9a4df09195f31b348cbdf2abf637563803ea41addd83dd2cf100083f513ff.json  query-21ff67d6439605ce6658bebb5ce094c9204b05adcaf756a106375c2430a34c27.json  query-28867f9a2c432908e9d890fdc88ae47106ca7282b5d3e1e65b3493a5eaf136ee.json  query-31265b1cd6e25c7936647a7689b8e7289126b0499caf9ad16563461771451445.json  query-42e2944b379d8b34a85488c5ea98a8188d04a65c81bd30511dbccafb8e10f44f.json  query-44dd798b8b007631f6950bfae07f1268d3aa26ab87e11614b73441ed64f003ef.json  query-57296428b4e664feb952b7d11be6ba089881e9b356d0073771552e9bc2d3360f.json  query-5b49a4d8416cf8f0efafdf6f74d5809fccdd942e58279252fc0a66581e73cf31.json  query-6418925b77efe2b42118d9992c1fa3ce171938352fa0b35a34e0f0f6a420988f.json  query-7a3a04bc74b5d283b66da06ea7af63dd04486e686e4f66f04d438139405818a7.json  query-7bd3b74dd45b45bd735c90a44d12e238956d0f4099bef373634f932085ccf04b.json  query-843adebe8d69901aa848b5d5a1e08177dc2dea64ec34c38a1f9f317e334052de.json  query-87319187c2918ad5f4094115e6c81c4b80571fcf0f6769091ecdfffd6c742ae3.json  query-8e2a00476f9c793d5df044ece9caae55dbb2410fa7c979c1cb108bb290a77f4c.json  query-8fa5717b617a59c7596c53647aaa01a848067df0c15bdb00aa5ddb04766274d9.json  query-94060a6c89cc2305a31cab9c44ca04016d6417a99c01b601b266ca72449a33b6.json  query-a40819cedbcaa43978e1dd10edc560fd9d1aaa23123f80cc9175ccee0268af3e.json  query-ad3230778b394fdb4ba9bc1b495a32a382fd34dc3eec93ac47c397e297685ceb.json  query-ae17bb7dac4bb6d6509525309b5a473ac942eb82ec585f57904d11c234717395.json  query-b62674d11f0130604ea6f78fe9d5b26dead5dedba0ff3b38a17a8a597048c8b2.json  query-bc72a6c339bdba6583cbb2b393dc704ab3c4ab0056e132c1b215d1ee4a10142a.json  query-d74a414bddcf27d49ef5ecf2df34c2de75701f7015ca33aea6c0273ce44b8947.json  query-df9d04ed2e7ed5efb77b61fdb222f0b3f256f79da0a7f90d3149dbb23f37fc1b.json  query-e14ac85df6341f6dc7fdcc128f07c4e5015f0ca7cffb4c08fc5b11e1b686b945.json  query-e798c2c8f992bccbcaf178f5a32d331ce42812be8b55f9c2a92ac44ee5a3d040.json  query-f1abfabb42de08f4438b81904a679852e007f69dade27763f450b6e90602d8de.json  query-f3cf72593331495cfad93627e62db9552c5157a85f699b965d3713d9dd100447.json  query-f97f161ce6dcf39604e528634c3fb644dec3bc7edc17278694ecfc3cb96d02d5.json
backend/aio/: Cargo.toml
backend/aio/src/: main.rs
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/handlers/feeds/: get_feed.rs  get_feed_entries.rs  get_feed_icon.rs  mod.rs  new_feed.rs  query_feeds.rs
backend/db/: Cargo.toml
backend/db/migrations/: 20251205220913_init.sql
backend/db/src/: entries.rs  feeds.rs  icons.rs  lib.rs
backend/feed_loader/: Cargo.toml
backend/feed_loader/src/: lib.rs
backend/src/: config.rs  main.rs
backend/src/api/: error.rs  mod.rs
backend/src/api/frontend/: mod.rs
backend/src/api/handlers/: mod.rs
backend/src/api/handlers/entries/: mod.rs  query_entries.rs  update_read.rs
backend/src/api/handlers/feeds/: delete_feed.rs  export_opml.rs  get_feed.rs  get_feed_entries.rs  get_feed_icon.rs  import_opml.rs  mod.rs  new_feed.rs  query_feeds.rs  sync_feed.rs  update_feed.rs
backend/src/db/: entries.rs  feeds.rs  icons.rs  id.rs  mod.rs  opml.rs
backend/src/db/migrations/: 20251205220913_init.sql
backend/src/db/pg/: mod.rs  test_utils.rs
backend/src/db/pg/migrations/: 20251205220913_init.sql  20260126000000_opml_import_jobs.sql  20260219000000_add_conditional_request_headers.sql
backend/src/db/tests/: mod.rs  pg.rs
backend/src/feed_loader/: feed.rs  html.rs  mod.rs  sync.rs
e2e/: .env.e2e  package.json  playwright.config.js  pnpm-lock.yaml
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts
(+53 files in other folders)
