[workspace]
resolver = "2"
members = [
	"aio",
	"api",
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
