[workspace]
resolver = "2"
members = [
	"aio",
	"api",
	"feed_loader",
	"db"
]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono"] }
thiserror = "2.0.17"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
