[package]
name = "backend"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "multipart"] }
ulid = "1.2.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono"] }
thiserror = "2.0.17"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "limit"] }
reqwest = { version = "0.12.24", features = ["http2", "rustls-tls-webpki-roots"] }
rss = "2.0.12"
atom_syndication = "0.12.7"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
texting_robots = "0.2.2"
once_cell = "1.21.3"
sha2 = "0.10.9"
url = "2.5.7"
percent-encoding = "2.3.2"
base64 = "0.22.1"
dotenv = "0.15.0"
envy = "0.4.2"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"

