[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlx.workspace = true
feed_loader.path = "../feed_loader"
db.path = "../db"
axum = { version = "0.8.3", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "limit"] }
