[package]
name = "feed_loader"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
reqwest = { version = "0.12.24", features = ["http2", "rustls-tls-webpki-roots"] }
rss = "2.0.12"
atom_syndication = "0.12.7"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
