[package]
name = "feed_loader"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
db.path = "../db"
reqwest = { version = "0.12.24", features = ["http2", "rustls-tls-webpki-roots"] }
rss = "2.0.12"
atom_syndication = "0.12.7"
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
texting_robots = "0.2.2"
once_cell = "1.21.3"
sha2 = "0.10.9"
url = "2.5.7"
percent-encoding = "2.3.2"
base64 = "0.22.1"
